[gd_scene load_steps=55 format=2]

[ext_resource path="res://Maps/ChaosInTheCity/Sprites/EnemyPunk/attack.png" type="Texture" id=2]
[ext_resource path="res://Maps/ChaosInTheCity/Sprites/EnemyPunk/hurt.png" type="Texture" id=3]
[ext_resource path="res://Maps/ChaosInTheCity/Sprites/EnemyPunk/walk.png" type="Texture" id=4]
[ext_resource path="res://Maps/ChaosInTheCity/Enemies/EnemyPunk.gd" type="Script" id=5]
[ext_resource path="res://Maps/ChaosInTheCity/SoundEffects/Enemies/body_hit_small_11.wav" type="AudioStream" id=6]
[ext_resource path="res://Maps/ChaosInTheCity/SoundEffects/Enemies/Punch.wav" type="AudioStream" id=7]
[ext_resource path="res://Maps/ChaosInTheCity/SoundEffects/Enemies/man_grunt_6.wav" type="AudioStream" id=8]
[ext_resource path="res://Maps/ChaosInTheCity/Sprites/EnemyPunk/idle.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 19.0909, 3 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 9 )
region = Rect2( 288, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 4 )
region = Rect2( 288, 0, 96, 63 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 61 ), SubResource( 62 ), SubResource( 63 ) ],
"loop": false,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 64 ), SubResource( 65 ), SubResource( 76 ), SubResource( 77 ) ],
"loop": false,
"name": "Dead",
"speed": 2.0
}, {
"frames": [ SubResource( 66 ), SubResource( 67 ) ],
"loop": false,
"name": "Hurt",
"speed": 3.0
}, {
"frames": [ SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=54]
animation = "Dead"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "Hurt"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=50]

[sub_resource type="AnimationNodeStateMachineTransition" id=51]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=55]

[sub_resource type="AnimationNodeStateMachine" id=30]
states/Attack/node = SubResource( 23 )
states/Attack/position = Vector2( 260, 221 )
states/Dead/node = SubResource( 54 )
states/Dead/position = Vector2( 830.663, 462.541 )
states/Hurt/node = SubResource( 32 )
states/Hurt/position = Vector2( 660, 364 )
states/Idle/node = SubResource( 24 )
states/Idle/position = Vector2( 260, 364 )
states/Walk/node = SubResource( 25 )
states/Walk/position = Vector2( 660, 215 )
transitions = [ "Idle", "Attack", SubResource( 26 ), "Attack", "Idle", SubResource( 27 ), "Idle", "Walk", SubResource( 28 ), "Walk", "Idle", SubResource( 29 ), "Idle", "Hurt", SubResource( 33 ), "Hurt", "Idle", SubResource( 34 ), "Walk", "Attack", SubResource( 35 ), "Attack", "Walk", SubResource( 36 ), "Walk", "Hurt", SubResource( 50 ), "Hurt", "Walk", SubResource( 51 ), "Hurt", "Dead", SubResource( 55 ) ]
start_node = "Idle"
graph_offset = Vector2( -209.337, 121.477 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=31]

[sub_resource type="Animation" id=19]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Attack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PunchArea:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PunchArea:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=49]
resource_name = "Dead"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Dead" ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "death"
} ]
}

[sub_resource type="Animation" id=20]
resource_name = "Hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Hurt" ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "is_not_hit"
} ]
}

[sub_resource type="Animation" id=21]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}

[sub_resource type="Animation" id=22]
resource_name = "Walk"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Walk" ]
}

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 14.0909, 23.5455 )

[sub_resource type="CircleShape2D" id=56]
radius = 169.074

[sub_resource type="RectangleShape2D" id=41]
extents = Vector2( 24.5455, 23.1818 )

[sub_resource type="RectangleShape2D" id=42]
extents = Vector2( 18.5, 8.63636 )

[node name="EnemyPunk" type="KinematicBody2D"]
scale = Vector2( 1.1, 1.1 )
collision_layer = 16
collision_mask = 97
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.81818, 43 )
shape = SubResource( 17 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 1 )
animation = "Idle"
speed_scale = 0.9
playing = true

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 30 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 31 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Attack = SubResource( 19 )
anims/Dead = SubResource( 49 )
anims/Hurt = SubResource( 20 )
anims/Idle = SubResource( 21 )
anims/Walk = SubResource( 22 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 16384
collision_mask = 32833

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -5, 4.45455 )
shape = SubResource( 18 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2( -3, 11 )
shape = SubResource( 56 )

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( -47.2727, 8.63636 )
shape = SubResource( 41 )

[node name="PunchArea" type="Area2D" parent="."]
collision_layer = 4096
collision_mask = 8192
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PunchArea"]
position = Vector2( -48.5, 1.36364 )
shape = SubResource( 42 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="Punch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="Dead" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
